Update control.bat to handle JDK 17